--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,6 +1,10 @@
+@import "../../Styles/fonts";
+
 .contact-form {
   padding: 10%;
   box-sizing: border-box;
+  // background-color: blue;
+  height: 100%;
   &__title {
     font-size: 2rem;
     color: #fff;
@@ -9,6 +13,7 @@
   //   position: relative;
   &__label-user {
     position: relative;
+    font-family: "SpaceMono";
   }
   &__label-envelope {
     position: relative;
@@ -20,45 +25,97 @@
     display: block;
     box-sizing: border-box;
     width: 100%;
-    font-size: 16px;
+    font-size: 1.25rem;
+    font-family: "SpaceMono";
     background: #323232;
     margin: 7px 0;
-    border: 1px solid #00c1a8;
-    color: #00c1a8;
-    opacity: 0.5;
-    min-height: 50px;
+    border: 3px solid #00c1a8;
+    border-radius: 10px;
+    // color: #00c1a8;
+    color: #fff;
+    padding-left: 55px;
+    padding-bottom: 5px;
+    opacity: 0.6;
+    min-height: 55px;
     text-shadow: none;
+    z-index: 9999;
+    &:focus {
+      color: white;
+      // font-family: "SpaceMono";
+      outline: none;
+      border-color: #00c1a8;
+      cursor: pointer;
+      opacity: 0.5;
+    }
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  &__input-msg {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    font-size: 1.25rem;
+    background: #323232;
+    margin: 7px 0;
+    border: 3px solid #00c1a8;
+    border-radius: 10px;
+    // color: #00c1a8;
+    color: #fff;
+    font-family: "SpaceMono";
+    padding-top: 15px;
+    padding-left: 55px;
+    padding-bottom: 5px;
+    opacity: 0.6;
+    min-height: 55px;
+    text-shadow: none;
+    resize: none;
+    &:focus {
+      color: white;
+      outline: none;
+      border-color: #00c1a8;
+      cursor: pointer;
+      opacity: 0.5;
+    }
+    &:hover {
+      cursor: pointer;
+    }
   }
   &__icon-user {
     color: white;
     background-color: transparent;
-    margin-top: 9px;
+    margin-top: 11px;
     margin-left: 10px;
     position: absolute;
-    z-index: 99;
+    // z-index: 1;
   }
   &__icon-envelope {
-    color: white;
+    color: black;
     background-color: transparent;
-    margin-top: 9px;
+    margin-top: 11px;
     margin-left: 10px;
     position: absolute;
-    z-index: 99;
+    // z-index: 10;
   }
   &__icon-comment {
     color: white;
     background-color: transparent;
     top: 5%;
+    // margin-top: 15px;
     margin-left: 10px;
     position: absolute;
-    z-index: 99;
+    // z-index: 1;
   }
   &__button {
     width: 100%;
     height: 50px;
     color: #16f1d4;
     font-size: 1.5rem;
+    font-family: "BioRhyme";
     padding: 0;
+    border: 3px solid #00c1a8;
+    border-radius: 10px;
+    // position: relative;
     &:hover {
       background: #00c1a8;
       color: #fff;
@@ -68,6 +125,22 @@
   }
 }
 .fa-paper-plane {
+  // position: absolute;
+  // left: 20vw;
   margin-right: 10px;
   background-color: transparent;
+}
+
+.contact-form__input::placeholder {
+  // padding-left: 5px;
+  color: #fff;
+  font-size: 1.25rem;
+  font-family: "SpaceMono";
+  padding-top: 0;
+}
+.contact-form__input-msg::placeholder {
+  font-size: 1.25rem;
+  color: white;
+
+  font-family: "SpaceMono";
 }
