--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -8,7 +8,7 @@
 //   position: relative;
 // }
 .testtest {
-  color: whitesmoke;
+  color: #ff69b4;
   font-family: "SpaceMono";
   font-size: 2rem;
   //   position: absolute;
@@ -18,7 +18,7 @@
   //   left: 6%;
 }
 .testtest1 {
-  color: whitesmoke;
+  color: #98ff98;
   font-family: "SpaceMono";
   font-size: 2rem;
   margin-top: 5%;
@@ -29,7 +29,7 @@
 }
 
 .testtest2 {
-  color: whitesmoke;
+  color: #40e0d0;
   font-family: "SpaceMono";
   font-size: 2rem;
   margin-top: 5%;
@@ -40,7 +40,27 @@
 }
 
 .testtest3 {
-  color: whitesmoke;
+  color: #ff69b4;
+  font-family: "BioRhyme";
+  font-size: 1rem;
+  margin-top: 6%;
+  margin-left: 6%;
+  //   position: absolute;
+  //   top: 36%;
+  //   left: 6%;
+}
+.testtest4 {
+  color: #f5f5f5;
+  font-family: "BioRhyme";
+  font-size: 1rem;
+  margin-top: 6%;
+  margin-left: 6%;
+  //   position: absolute;
+  //   top: 36%;
+  //   left: 6%;
+}
+.testtest5 {
+  color: #98ff98;
   font-family: "BioRhyme";
   font-size: 1rem;
   margin-top: 6%;
