--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -35,6 +35,7 @@
     font-size: 1.5rem;
     text-decoration: none;
     padding: 0.5rem 1rem;
+    z-index: 9;
     &:hover {
       background-color: rgb(46, 37, 37);
       border-radius: 4px;
