--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 * {
   box-sizing: border-box;
+  /* width: 100%; */
   margin: 0;
   padding: 0;
   /* background-color: rgb(32, 27, 27); */
-  background-color: #3399ff;
-  background-color: #2f4454;
+  /* background-color: #3399ff; */
+  /* background-color: #2f4454; */
+  background-color: #2a3b49;
+
+  /* overflow: hidden; */
   /* background-color: white; */
 }
 /* body {
