--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -98,7 +98,7 @@
     // z-index: 10;
   }
   &__icon-comment {
-    color: white;
+    color: green;
     background-color: transparent;
     top: 5%;
     // margin-top: 15px;
