--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,5 +1,6 @@
 .navBar {
-  background-color: rgb(24, 19, 19);
+  // background-color: rgb(24, 19, 19);
+  background-color: #e2dfdf;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -11,7 +12,8 @@
     font-size: 2rem;
     font-weight: 700;
     color: white;
-    background-color: rgb(24, 19, 19);
+    // background-color: rgb(24, 19, 19);
+    background-color: #e2dfdf;
     // cursor: pointer;
     margin-right: 5%;
     // margin-left: 1%;
@@ -19,7 +21,8 @@
 
   &__menu {
     display: grid;
-    background-color: rgb(24, 19, 19);
+    background-color: #e2dfdf;
+    // background-color: rgb(24, 19, 19);
     grid-template-columns: repeat(4, auto);
     grid-gap: 10px;
     list-style: none;
@@ -30,7 +33,8 @@
   }
 
   &__link {
-    background-color: rgb(24, 19, 19);
+    background-color: #e2dfdf;
+    // background-color: rgb(24, 19, 19);
     color: white;
     font-size: 1.5rem;
     text-decoration: none;
@@ -50,6 +54,7 @@
 
 .fa-bars {
   color: white;
+  background-color: #e2dfdf;
   //   padding-top: 20%;
   //   height: 5rem;
 }
@@ -62,36 +67,39 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      height: 500px;
+      // height: 150px;
       position: absolute;
       top: 80px;
       left: -100%;
       opacity: 1;
-      //   transition: all 0.5s ease;
+      // transition: all 0.5s ease;
     }
     &__menu-active {
       position: absolute;
-      background: rgb(24, 19, 19);
+      background-color: #e2dfdf;
+      // background: rgb(24, 19, 19);
       width: 100%;
       top: 80px;
       left: 0;
       opacity: 1;
       transition: all 0.5s ease;
-      z-index: 1;
+      z-index: 10;
     }
     &__link {
       text-align: center;
-      padding: 2rem;
+      padding: 1rem;
       width: 100%;
       display: table;
       &:hover {
-        background-color: rgb(54, 19, 19);
+        // background-color: rgb(54, 19, 19);
+        background-color: #376e6f;
         border-radius: 0;
       }
     }
 
     &__title {
-      background-color: rgb(20, 17, 17);
+      // background-color: rgb(20, 17, 17);
+      background-color: #e2dfdf;
       position: absolute;
       top: 0;
       left: 0;
@@ -100,7 +108,8 @@
     }
 
     &__menu-icon {
-      background-color: rgb(24, 19, 19);
+      // background-color: rgb(24, 19, 19);
+      background-color: #e2dfdf;
       display: block;
       position: absolute;
       top: 0;
@@ -112,7 +121,12 @@
   }
 
   .fa-times {
+    background-color: #e2dfdf;
     color: #fff;
     font-size: 2rem;
   }
+}
+
+a {
+  text-decoration: none;
 }
