--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,9 +1,12 @@
+@import "../../Styles/global";
+
+// NavBar styling for tablet and desktop media
+
 .navBar {
-  // background-color: rgb(24, 19, 19);
   background-color: #e2dfdf;
   height: 80px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   font-size: 1rem;
 
@@ -12,30 +15,26 @@
     font-size: 2rem;
     font-weight: 700;
     color: white;
-    // background-color: rgb(24, 19, 19);
-    // background-color: #e2dfdf;
     background-color: transparent;
-    // cursor: pointer;
+    padding-bottom: 11px;
     margin-right: 5%;
-    // margin-left: 5%;
+    margin-left: 4%;
   }
 
   &__menu {
     display: grid;
     background-color: #e2dfdf;
-    // background-color: rgb(24, 19, 19);
     grid-template-columns: repeat(4, auto);
     grid-gap: 10px;
     list-style: none;
     text-align: center;
-    width: 70vw;
+    width: 80vw;
     justify-content: end;
     margin-right: 2rem;
   }
 
   &__link {
     background-color: #e2dfdf;
-    // background-color: rgb(24, 19, 19);
     color: white;
     font-size: 1.5rem;
     text-decoration: none;
@@ -56,9 +55,10 @@
 .fa-bars {
   color: white;
   background-color: #e2dfdf;
-  //   padding-top: 20%;
-  //   height: 5rem;
+  margin-top: 5px;
 }
+
+// Nav Bar stylings for mobile and hamburger menu
 
 @media screen and (max-width: 767px) {
   .navBar {
@@ -68,17 +68,15 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      // height: 150px;
       position: absolute;
       top: 80px;
       left: -100%;
       opacity: 1;
-      // transition: all 0.5s ease;
     }
+
     &__menu-active {
       position: absolute;
       background-color: #e2dfdf;
-      // background: rgb(24, 19, 19);
       width: 100%;
       top: 80px;
       left: 0;
@@ -86,30 +84,27 @@
       transition: all 0.5s ease;
       z-index: 10;
     }
+
     &__link {
       text-align: center;
       padding: 1rem;
       width: 100%;
       display: table;
       &:hover {
-        // background-color: rgb(54, 19, 19);
-        background-color: #376e6f;
+        background-color: #2a3b49;
         border-radius: 0;
       }
     }
 
     &__title {
-      // background-color: rgb(20, 17, 17);
       background-color: #e2dfdf;
       position: absolute;
-      top: -19px;
-      left: 0;
-      //   margin-left: 5%;
+      top: -21px;
+      left: -15px;
       transform: translate(25%, 50%);
     }
 
     &__menu-icon {
-      // background-color: rgb(24, 19, 19);
       background-color: #e2dfdf;
       display: block;
       position: absolute;
