--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,16 +1,30 @@
 @import "../../Styles/global";
-
+.contact-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .contact-form {
   padding: 10%;
   box-sizing: border-box;
-  // background-color: blue;
-  height: 100%;
+  width: 100%;
+  max-width: 1000px;
   &__title {
-    font-size: 2rem;
+    font-family: "BioRhyme";
+    font-size: 1.5rem;
+    font-weight: 200;
+    letter-spacing: 2px;
     color: #fff;
-    margin-bottom: 2%;
+    margin-bottom: 5%;
+    text-align: center;
   }
-  //   position: relative;
+  &__divider {
+    border-bottom: 3px solid #98ff98;
+    margin-bottom: 5%;
+    width: 80%;
+    margin-left: 10%;
+  }
   &__label-user {
     position: relative;
     font-family: "SpaceMono";
@@ -27,25 +41,24 @@
     width: 100%;
     font-size: 1.25rem;
     font-family: "SpaceMono";
-    background: #323232;
+    background: transparent;
     margin: 7px 0;
-    border: 3px solid #00c1a8;
+    border: 3px solid #b7f3ed;
     border-radius: 10px;
     // color: #00c1a8;
     color: #fff;
     padding-left: 55px;
     padding-bottom: 5px;
-    opacity: 0.6;
+    opacity: 0.7;
     min-height: 55px;
     text-shadow: none;
-    z-index: 9999;
+    // z-index: 9999;
     &:focus {
       color: white;
-      // font-family: "SpaceMono";
       outline: none;
-      border-color: #00c1a8;
+      border-color: #98ff98;
       cursor: pointer;
-      opacity: 0.5;
+      opacity: 0.9;
     }
     &:hover {
       cursor: pointer;
@@ -56,26 +69,28 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 1.25rem;
-    background: #323232;
+
+    background-color: transparent;
+
     margin: 7px 0;
-    border: 3px solid #00c1a8;
+    border: 3px solid #b7f3ed;
     border-radius: 10px;
     // color: #00c1a8;
     color: #fff;
     font-family: "SpaceMono";
-    padding-top: 15px;
+    padding-top: 7px;
     padding-left: 55px;
     padding-bottom: 5px;
-    opacity: 0.6;
+    opacity: 0.7;
     min-height: 55px;
     text-shadow: none;
     resize: none;
     &:focus {
       color: white;
       outline: none;
-      border-color: #00c1a8;
+      border-color: #98ff98;
       cursor: pointer;
-      opacity: 0.5;
+      opacity: 0.9;
     }
     &:hover {
       cursor: pointer;
@@ -90,7 +105,7 @@
     // z-index: 1;
   }
   &__icon-envelope {
-    color: black;
+    color: white;
     background-color: transparent;
     margin-top: 11px;
     margin-left: 10px;
@@ -98,26 +113,27 @@
     // z-index: 10;
   }
   &__icon-comment {
-    color: green;
+    color: white;
     background-color: transparent;
     top: 5%;
     // margin-top: 15px;
     margin-left: 10px;
     position: absolute;
+    // opacity: 1;
     // z-index: 1;
   }
   &__button {
     width: 100%;
     height: 50px;
-    color: #16f1d4;
+    color: white;
     font-size: 1.5rem;
     font-family: "BioRhyme";
     padding: 0;
-    border: 3px solid #00c1a8;
+    border: 3px solid #b7f3ed;
     border-radius: 10px;
     // position: relative;
     &:hover {
-      background: #00c1a8;
+      background: #b7f3ed;
       color: #fff;
       cursor: pointer;
       opacity: 1;
@@ -141,6 +157,7 @@
 .contact-form__input-msg::placeholder {
   font-size: 1.25rem;
   color: white;
+  // color: black;
 
   font-family: "SpaceMono";
 }
