--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -10,20 +10,35 @@
   box-sizing: border-box;
   width: 100%;
   max-width: 1000px;
+  // margin-top: 5%;
   &__title {
     font-family: "BioRhyme";
     font-size: 1.5rem;
     font-weight: 200;
     letter-spacing: 2px;
     color: #fff;
-    margin-bottom: 5%;
+    margin-bottom: 7%;
     text-align: center;
   }
   &__divider {
     border-bottom: 3px solid #98ff98;
-    margin-bottom: 5%;
+    margin-bottom: 7%;
+    margin-top: 7%;
     width: 80%;
     margin-left: 10%;
+  }
+  &__socials {
+    // width: 80%;
+    display: flex;
+    justify-content: space-evenly;
+    // align-items: center;
+    margin-bottom: 5%;
+  }
+  &__social-icon {
+    color: #b7f3ed;
+  }
+  &__container {
+    margin-top: 10%;
   }
   &__label-user {
     position: relative;
