--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
   /* background-color: rgb(32, 27, 27); */
   /* background-color: #3399ff; */
   /* background-color: #2f4454; */
-  background-color: #2a3b49;
+  /* background-color: #2a3b49; */
+  background-color: #051418;
 
   /* overflow: hidden; */
   /* background-color: white; */
