Added skill animation

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -14,11 +14,11 @@
   }
 }
 
-h1 {
+.home-greeting__h1 {
   background-color: transparent;
   margin-bottom: 25px;
   min-height: 205px;
-  max-height: 205px;
+  // max-height: 205px;
 }
 
 h2 {
