--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -149,6 +149,7 @@
     padding: 0;
     border: 3px solid #b7f3ed;
     border-radius: 10px;
+    // z-index: 1000;
     // position: relative;
     &:hover {
       background: #b7f3ed;
