Adjust contact form z-index and social links

--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -1,7 +1,7 @@
 .circle {
-  z-index: 1;
+  // z-index: 5;
   position: absolute;
-  //   width: 100%;
+  width: 100%;
   overflow: hidden;
   border-radius: 50%;
   background: white;
