--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -39,9 +39,9 @@
 
   &__link {
     background-color: #b7f3ed;
-    color: #6e6d6d;
+    color: #051418;
     font-size: 1.5rem;
-    font-family: "BioRhyme";
+    font-family: "BreeSerif";
     text-decoration: none;
     padding: 0.5rem 1rem;
     z-index: 9;
@@ -101,7 +101,7 @@
       width: 100%;
       display: table;
       &:hover {
-        background-color: #2a3b49;
+        background-color: #051418;
         border-radius: 0;
       }
     }
