--- a/src/Styles/_fonts.scss
+++ b/src/Styles/_fonts.scss
@@ -11,3 +11,66 @@
   font-weight: 400;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Fogie";
+  src: url("../Assets/Fonts/Fogie.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Stampbor-Shabby";
+  src: url("../Assets/Fonts/SpaceMono-Regular.ttf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "GloriaHallelujah";
+  src: url("../Assets/Fonts/GloriaHallelujah.ttf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Orbitron";
+  src: url("../Assets/Fonts/Orbitron.ttf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "PatrickHand";
+  src: url("../Assets/Fonts/PatrickHand.ttf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "ArchitectsDaughter";
+  src: url("../Assets/Fonts/ArchitectsDaughter.ttf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Monda";
+  src: url("../Assets/Fonts/Monda.ttf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "BreeSerif";
+  src: url("../Assets/Fonts/BreeSerif.ttf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SpecialElite";
+  src: url("../Assets/Fonts/SpecialElite.ttf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
