--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -15,7 +15,8 @@
   max-width: 1000px;
   // margin-top: 5%;
   &__title {
-    font-family: "BioRhyme";
+    // font-family: "BreeSerif";
+    font-family: "ArchitectsDaughter";
     font-size: 1.5rem;
     font-weight: 200;
     letter-spacing: 2px;
@@ -54,7 +55,8 @@
   }
   &__label-user {
     position: relative;
-    font-family: "SpaceMono";
+    // font-family: "SpaceMono";
+    // font-family: "BreeSerif";
   }
   &__label-envelope {
     position: relative;
@@ -67,7 +69,8 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 1.25rem;
-    font-family: "SpaceMono";
+    // font-family: "SpaceMono";
+    font-family: "BreeSerif";
     background: transparent;
     margin: 7px 0;
     border: 3px solid #b7f3ed;
@@ -104,7 +107,8 @@
     border-radius: 10px;
     // color: #00c1a8;
     color: #fff;
-    font-family: "SpaceMono";
+    // font-family: "SpaceMono";
+    font-family: "BreeSerif";
     padding-top: 7px;
     padding-left: 55px;
     padding-bottom: 5px;
@@ -155,7 +159,10 @@
     color: white;
     background-color: transparent;
     font-size: 1.5rem;
-    font-family: "BioRhyme";
+    // font-family: "BioRhyme";
+    // font-family: "BreeSerif";
+    font-family: "ArchitectsDaughter";
+
     padding: 0;
     border: 3px solid #b7f3ed;
     border-radius: 10px;
@@ -180,7 +187,9 @@
   // padding-left: 5px;
   color: #fff;
   font-size: 1.25rem;
-  font-family: "SpaceMono";
+  // font-family: "SpaceMono";
+  font-family: "BreeSerif";
+  // font-family: "ArchitectsDaughter";
   padding-top: 0;
 }
 .contact-form__input-msg::placeholder {
@@ -188,5 +197,7 @@
   color: white;
   // color: black;
 
-  font-family: "SpaceMono";
+  // font-family: "SpaceMono";
+  font-family: "BreeSerif";
+  // font-family: "ArchitectsDaughter";
 }
