--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -146,7 +146,8 @@
   &__icon-comment {
     color: white;
     background-color: transparent;
-    top: 5%;
+    // top: 5%; chrome and safari okay
+    top: 10px;
     // margin-top: 15px;
     margin-left: 10px;
     position: absolute;
