navbar styling adjustment

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -100,6 +100,7 @@
       padding: 1rem;
       width: 100%;
       display: table;
+      background-color: #b7f3ed;
       &:hover {
         background-color: #051418;
         border-radius: 0;
@@ -135,4 +136,5 @@
 
 a {
   text-decoration: none;
+  background-color: #b7f3ed;
 }
