--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -102,7 +102,7 @@
       display: table;
       background-color: #b7f3ed;
       &:hover {
-        background-color: #051418;
+        // background-color: #051418;
         border-radius: 0;
       }
     }
