--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,1 +1,109 @@
+.container {
+  padding: 1em 0;
+  //   float: left;
+  width: 100%;
+  //   display: flex;
+  //   justify-content: space-around;
+}
+.test {
+  display: flex;
+  justify-content: space-evenly;
+  //   align-items: center;
+  //   align-content: space-between;
+  flex-wrap: wrap;
+}
 
+// @media screen and (max-width: 640px) {
+//   .container {
+//     display: block;
+//     width: 100%;
+//   }
+// }
+
+// @media screen and (min-width: 900px) {
+//   .container {
+//     width: 33.33333%;
+//   }
+// }
+
+.container .title {
+  color: #1a1a1a;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.content {
+  position: relative;
+  width: 35%;
+  //   max-width: 400px;
+  margin: 40px auto;
+  overflow: hidden;
+}
+
+.content .content-overlay {
+  background: rgba(248, 240, 240, 0.7);
+  position: absolute;
+  height: 99%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
+
+.content:hover .content-overlay {
+  opacity: 1;
+}
+
+.content-image {
+  width: 100%;
+}
+
+.content-details {
+  position: absolute;
+  text-align: center;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 100%;
+  height: 50%;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.content-title {
+  margin-top: 20px;
+}
+
+.content:hover .content-details {
+  top: 50%;
+  left: 50%;
+  opacity: 0.5;
+}
+
+.content-details h3 {
+  color: #fff;
+  font-weight: 500;
+  letter-spacing: 0.15em;
+  margin-bottom: 0.5em;
+  text-transform: uppercase;
+}
+
+.content-details p {
+  color: #fff;
+  font-size: 0.8em;
+}
+
+.fadeIn-bottom {
+  top: 80%;
+}
