Removed global style bug

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -147,7 +147,7 @@
     color: white;
     background-color: transparent;
     // top: 5%; chrome and safari okay
-    top: 10px;
+    margin-top: 10px;
     // margin-top: 15px;
     margin-left: 10px;
     position: absolute;
