--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,3 +1,5 @@
+@import "../../Styles/global";
+
 .container {
   padding: 1em 0;
   //   float: left;
@@ -5,7 +7,7 @@
   //   display: flex;
   //   justify-content: space-around;
 }
-.test {
+.tesssst {
   display: flex;
   justify-content: space-evenly;
   //   align-items: center;
