--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -33,13 +33,6 @@
 h2 {
   background-color: transparent;
   margin-top: 10%;
-  // margin-bottom: 5%;
-  // color: #a2d6d1;
-  // font-family: "SpecialElite";
-  // font-size: 1rem;
-  // display: inline;
-  // overflow: hidden;
-  // max-height: 20px;
   min-height: 24px;
   cursor: default;
   @include tablet {
@@ -53,11 +46,6 @@ h2 {
   height: 80px;
   // color: #98ff98;
   color: #b7f3ed;
-  // font-family: "PatrickHand";
-  // font-family: "GloriaHallelujah";
-  // font-family: "SpecialElite";
-  // font-family: "ArchitectsDaughter";
-  // font-family: "Monda";
   font-family: "BreeSerif";
   font-weight: 400;
   // margin-top: 5%;
@@ -93,7 +81,8 @@ h2 {
 
 .wordCarousel {
   background-color: transparent;
-  font-size: .95rem;
+  font-size: 1.25rem;
+  
   width: 78.5%;
   font-weight: 100;
   color: #98ff98;
@@ -102,7 +91,6 @@ h2 {
     width: 100%;
   }
   &__text {
-    // font-family: "Fogie";
     font-family: "ArchitectsDaughter";
     background-color: transparent;
   }
@@ -120,7 +108,6 @@ h2 {
     }
     li {
       background-color: transparent;
-      // font-family: "spaceMono";
       font-family: "ArchitectsDaughter";
       letter-spacing: 0.5px;
       color: #98ff98;
@@ -136,6 +123,7 @@ h2 {
   }
 }
 .btn {
+  
   // Set margin top to 5% for tab/desk
   background-color: transparent;
   font-family: "BreeSerif";
@@ -146,11 +134,12 @@ h2 {
 }
 
 .btn-slice {
+  margin-top: 5%;
   background-color: transparent;
 	padding: 1.2rem 2.5rem;
-  border: 2px solid #b7f3ed;
+  border: 2px solid #051418;
 	border-radius: 0rem;
-	color: #b7f3ed;
+	color: #051418;
   font-size: 0.6875rem;
   font-family: "BreeSerif";
 	font-weight: 700;
@@ -168,6 +157,11 @@ h2 {
   -moz-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
   -o-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
   transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); /* custom */
+
+  @include tablet {
+    border: 2px solid #b7f3ed;
+	  color: #b7f3ed;
+  }
 }
 
 .btn-slice .top  {
@@ -259,7 +253,7 @@ span {
   background-color: transparent;
 	height: 1px;
 	width: 60px;
-	background-color: #b7f3ed;
+	background-color: #051418;
 	position: absolute;
 	margin-top: 8px;
 	right: -35px;
@@ -275,6 +269,10 @@ span {
   -moz-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
   -o-transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); 
   transition-timing-function: cubic-bezier(0.890, -0.170, 0.140, 1.225); /* custom */
+
+  @include tablet {
+    background-color: #b7f3ed;
+  }
 }
 .btn-slice:hover:before{
   background-color: transparent;
@@ -284,7 +282,7 @@ span {
 // Text Flipper Animation
 
 .flip5 {
-  animation: flip5 14s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
+  animation: flip5 25s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
 }
 
 @keyframes flip5 {
