--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -280,49 +280,62 @@ span {
 }
 
 // Text Flipper Animation
+.flip4 { animation: flip4 10s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
 
-.flip5 {
-  animation: flip5 25s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
+@keyframes flip4 {
+  0% { margin-top: -360px; }
+  5% { margin-top: -270px; }
+  25% { margin-top: -270px; }
+  30% { margin-top: -180px; }
+  50% { margin-top: -180px; }
+  55% { margin-top: -90px; }
+  75% { margin-top: -90px; }
+  80% { margin-top: 0px; }
+  99.99% { margin-top: 0px; }
+  100% { margin-top: -270px; }
 }
+// .flip5 {
+//   animation: flip5 25s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
+// }
 
-@keyframes flip5 {
-  0% {
-    margin-top: -450px;
-  }
-  5% {
-    margin-top: -360px;
-  }
-  10% {
-    margin-top: -360px;
-  }
-  25% {
-    margin-top: -270px;
-  }
-  30% {
-    margin-top: -270px;
-  }
-  50% {
-    margin-top: -180px;
-  }
-  55% {
-    margin-top: -180px;
-  }
-  75% {
-    margin-top: -90px;
-  }
-  80% {
-    margin-top: -90px;
-  }
-  90% {
-    margin-top: 0px;
-  }
-  99.99% {
-    margin-top: 0px;
-  }
-  100% {
-    margin-top: -360px;
-  }
-}
+// @keyframes flip5 {
+//   0% {
+//     margin-top: -450px;
+//   }
+//   5% {
+//     margin-top: -360px;
+//   }
+//   10% {
+//     margin-top: -360px;
+//   }
+//   25% {
+//     margin-top: -270px;
+//   }
+//   30% {
+//     margin-top: -270px;
+//   }
+//   50% {
+//     margin-top: -180px;
+//   }
+//   55% {
+//     margin-top: -180px;
+//   }
+//   75% {
+//     margin-top: -90px;
+//   }
+//   80% {
+//     margin-top: -90px;
+//   }
+//   90% {
+//     margin-top: 0px;
+//   }
+//   99.99% {
+//     margin-top: 0px;
+//   }
+//   100% {
+//     margin-top: -360px;
+//   }
+// }
 
 // Bouncing Text Animation
 
